Added forgotten links to notebook.

--- a/movie_review_sentiment_analysis.ipynb
+++ b/movie_review_sentiment_analysis.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Technical Assignment - Week 2"
+    "# Technical Assignment - Week 2\n",
+    "- GitHub repo: https://github.com/jliima/movie-review-sentiment-analyzer\n",
+    "- Demo video: https://www.youtube.com/watch?v=Q_YuPJ5Y2OU\n",
+    "- Hugging Face Model: https://huggingface.co/hieroja/custom-sentiment-model"
    ]
   },
   {
